fix text alignmemt

--- a/styles/scoreDisplayPage4.css
+++ b/styles/scoreDisplayPage4.css
@@ -190,10 +190,9 @@
 
 .roundWins{
   color: gray;
-  font-size: 5vw;
+  font-size: 6vw;
   background-color: transparent;
   margin-left: 6vw;
-  margin-top: 4rem;
 } 
 
 #helpCell {
